--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "number-locale-string",
   "version": "0.1.2",
-  "description": "",
+  "description": "Imprementation of Number.toLocaleString() to Node",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wandersoncs/number-to-locale-string.git"
